--- a/starterOnly/styles.css/modal.css
+++ b/starterOnly/styles.css/modal.css
@@ -57,6 +57,7 @@ img {
   background-color: #ff0000;
   color: #ffffff;
   border-radius: 15px;
+  text-decoration: underline;
 }
 
 .topnav a.active {
@@ -389,7 +390,7 @@ input {
   font-size: 16px;
 }
 .hero-section {
-  /* min-height: 93vh; */
+  height: 650px;
   width: 100%;
   border-radius: 10px;
   display: grid;
