--- a/starterOnly/styles.css/modalRegistration.css
+++ b/starterOnly/styles.css/modalRegistration.css
@@ -58,7 +58,7 @@ input {
 } 
 
 .formData .text-control:valid{
-  border: 2px solid green
+  border: 2px solid rgb(5, 190, 5)
 }
 
 .checkbox-label,
