--- a/starterOnly/styles.css/suscribeModal.css
+++ b/starterOnly/styles.css/suscribeModal.css
@@ -48,11 +48,11 @@ input {
   color: red;
 }
 
-.error small{
+/* .error small{
   opacity: 1;
   font-size: 0.6em;
   color: red;
-}
+} */
 .error input{
   border: 2px solid #e54858;
 } 
