--- a/starterOnly/styles.css/responsive.css
+++ b/starterOnly/styles.css/responsive.css
@@ -12,7 +12,7 @@
     .hero-content {
       background: #fff;
       color: #000;
-      padding: 20px;
+      padding: 20px 10px;
     }
     .hero-content::after {
       content: unset;
@@ -134,19 +134,26 @@
     }
     img{
       width: 55%;
-      margin-left: 20px;
+      margin-left: 10px;
     }
     .content{
       margin-top: 90px;
     }
   }
 
+  
   @media screen and (max-width: 389px) {
     .hero-headline {
       font-size: 2rem;
     }
     .hero-text {
       font-size: 0.7rem;
+    }
+  }
+
+  @media screen and (max-width: 389px) {
+    .topnav a.icon {
+      margin-top: -40px;
     }
   }
 
