ajout d'une fonction pour faire apparaitre une modale d'inscription sans rafraichir le navigateur

--- a/starterOnly/styles.css/pictureGameOn.css
+++ b/starterOnly/styles.css/pictureGameOn.css
@@ -197,7 +197,7 @@ main {
   color: #fff;
   position: relative;
   text-align: left;
-  /* min-width: 424px; */
+  min-width: 424px;
 }
 .hero-content::after {
   content: "";
